--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,5 +11,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         <div>TODO write content</div>
+        <li class="nav-item">
+                            <a class="nav-link" href="/bootstrap.html">P</a>
+                        </li>
     </body>
 </html>
